product_docs/docs/bart/2.5.5/bart_user/01_introduction.mdx
---
title: "Introduction"
---

The EDB Backup and Recovery Tool (BART) is an administrative utility that provides simplified backup and recovery management for multiple local or remote EDB Postgres Advanced Server and PostgreSQL database servers.

BART provides the following features:

-   Support for complete, hot, physical backups of multiple Advanced Servers and PostgreSQL database servers
-   Support for two types of backups – full base backups and block-level incremental backups
-   Backup and recovery management of database servers on local or remote hosts
-   A single, centralized catalog for backup data
-   Retention policy support for defining and managing how long backups should be kept
-   The capability to store the backup data in compressed format
-   Verified backup data with checksums
-   Backup information displayed in an easy-to-read format
-   A simplified point-in-time recovery process

This guide provides the following information about using BART:

-   an [overview](../02_overview/#overview) of the BART components and concepts.
-   information about the [backup and recovery management process](../03_using_bart/#using_bart).
-   information about [using tablespaces](../04_using_tablespaces/#using_tablespaces).

To view information about BART installation and upgrade, see the *EDB Postgres Backup and Recovery Installation and Upgrade Guide* and to view examples of BART operations and subcommands, see the *EDB Postgres Backup and Recovery Reference Guide*. These guides are available at the [EDB website.](https://www.enterprisedb.com/edb-docs/).

<div id="whats_new" class="registered_link"></div>

## What’s New

The `scan_interval` parameter forces a periodic full scan of the directory after the configured number of seconds. After upgrading to BART 2.5.5, users who have set this parameter to a non-default value may see increased CPU consumption on the part of bart-scanner. If this is an issue, consider increasing the configured value of `scan_interval` parameter, or removing the setting if it is not required. You must set the `scan_interval` parameter to a value significantly less than the `mbm_scan_timeout` parameter.

For more information about configuring the `scan_interval` parameter, see the EDB Postgres Backup and Recovery Installation and Upgrade Guide available at the [EDB website](https://www.enterprisedb.com/edb-docs/).

<div id="conventions_used_in_this_guide" class="registered_link"></div>

## Conventions Used in this Guide

The following is a list of conventions used throughout this document.

-   Much of the information in this document applies interchangeably to the PostgreSQL and EDB Postgres Advanced Server database systems. The term *Advanced Server* is used to refer to EDB Postgres Advanced Server. The term *Postgres* is used to generically refer to both PostgreSQL and Advanced Server. When a distinction needs to be made between these two database systems, the specific names, PostgreSQL or Advanced Server are used.

-   The installation directory of the PostgreSQL or Advanced Server products is referred to as `POSTGRES_INSTALL_HOME`:

    > -   For PostgreSQL Linux installations, this defaults to `/opt/PostgreSQL/<x.x>` for version 10 and earlier. For later versions, the installation directory is `/var/lib/pgsql/<x>`.
    > -   For Advanced Server Linux installations performed using the interactive installer for version 10 and earlier, this defaults to `/opt/PostgresPlus/<x.x>AS` or `/opt/edb/as<x.x>`. For Advanced Server Linux installations performed with an RPM package, this defaults to `/usr/ppas-<x.x>` or `/usr/edb/as<x.x>`. For Advanced Server Linux installations performed with an RPM package for version 11 or later, this defaults to `/usr/edb/as<xx>`.

## Restrictions on pg_basebackup

BART takes full backups using the `pg_basebackup` utility program under the following conditions:

-   The backup is taken on a standby server.
-   The `--with-pg_basebackup` option is specified with the `BACKUP` subcommand (see [Backup](../03_using_bart/03_basic_bart_subcommand_usage/03_backup/#backup)).
-   The number of thread count in effect is 1, and the `with-pg_basebackup` option is not specified with the `BACKUP` subcommand.
-   Database servers can only be backed up using `pg_basebackup` utility program of the same or later version than the database server version. For example, `pg_basebackup` version 9.5 can back up database server version 9.5, but it cannot back up database server version 9.6.

In the global section of the BART configuration file, the `pg_basebackup_path` parameter specifies the complete directory path to the `pg_basebackup` program. For information about the `pg_basebackup_path` parameter and the `thread_count`, see the *EDB Postgres Backup and Recovery Installation and Upgrade Guide* available at the [EDB website](https://www.enterprisedb.com/edb-docs/).

For information about `pg_basebackup`, see the [PostgreSQL Core Documentation](https://postgresql.org/docs/current/static/app-pgbasebackup.html).
